chore: add test  configuration for junit/jupiter modules