@@ -15,8 +15,14 @@ dependencies {
 
 description = "AssertJ-Swing - JUnit Jupiter Extension"
 
+val envIsCi: String? by project
 tasks.named<Test>("test") {
     useJUnitPlatform()
+    if ("true" == envIsCi) {
+        systemProperties.set("envIsCi", "true")
+    }
+    maxParallelForks =  1
+    jvmArgs("-Xmx2048m", "--add-opens", "java.desktop/javax.swing=ALL-UNNAMED")
 }
 
 spotless {
